<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="8dp"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutTop"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:background="#333"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/display_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultMsgTxt"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutBottom"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/open_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_open"
                    android:textStyle="bold" />

                <!--<Button
                    android:id="@+id/getinfo_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_getinfo"
                    android:textStyle="bold" />-->

                <Button
                    android:id="@+id/getpin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_getpin"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/getcard_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_getcard"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/goonchip_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_goonchip"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/finishchip_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_finishchip"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/removecard_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_removecard"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/events_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_events"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tables_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_tablesload"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/encryptBuffer_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_encryptBuffer"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/chipdirect_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_chipdirect"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/abort_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_abort"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/close_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_close"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/newtest_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_test"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</LinearLayout>